--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^2.0.0-beta.33"
+  },
+  "dependencies": {
+    "gitalk": "^1.7.2"
   }
 }
