--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "zjq",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-search": "^2.0.0-beta.35",
     "vuepress": "^2.0.0-beta.33"
   }
 }
